fix: Adjust CSS for consistent box-sizing and overflow handling in common and guest styles

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -1,14 +1,16 @@
 html {
     scroll-behavior: smooth !important;
-    width: 100vw !important;
+    width: 100% !important;
     overflow-x: hidden;
-
+    box-sizing: border-box;
 }
 
 body {
     font-family: 'Josefin Sans', sans-serif !important;
     padding: 0 !important;
     width: 100% !important;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body,
